# unitysvc-py

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  mkdocs.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
docs/: api-reference.md  cli-reference.md  getting-started.md  index.md  sdk-guide.md  sdk-reference.md  tutorial-groups-and-services.md
scripts/: generate_cli_reference.sh  generate_client.sh  openapi-python-client.yml
src/unitysvc/: __init__.py  _http.py  _streaming.py  _wrappers.py  aaliases.py  abroadcasts.py  achains.py  aclient.py  aenrollments.py  afiles.py  agroups.py  aliases.py  apublic.py  arecurrent_requests.py  arequest_logs.py  aresolve.py  asecrets.py  aservices.py  broadcasts.py  chains.py  cli.py  client.py  enrollments.py  exceptions.py  files.py  groups.py  public.py  recurrent_requests.py  request_logs.py  resolve.py  secrets.py  services.py
src/unitysvc/_generated/: __init__.py
src/unitysvc/_generated/models/: __init__.py  access_interface.py  access_interface_customer_secrets_info_type_0.py  access_interface_plan.py  access_interface_plan_routing_key_type_0.py  (+124 more)
src/unitysvc/commands/: __init__.py  _helpers.py  aliases.py  enrollments.py  files.py  groups.py  resolve.py  secrets.py  services.py
src/unitysvc/resources/: __init__.py  aaliases.py  aliases.py  arecurrent_requests.py  asecrets.py  recurrent_requests.py  secrets.py
src/unitysvc_py/: __init__.py  _http.py  aclient.py  cli.py  client.py  exceptions.py
src/unitysvc_py/commands/: __init__.py  recurrent_requests.py  secrets.py
src/unitysvc_py/resources/: __init__.py  aaliases.py  aliases.py  arecurrent_requests.py  asecrets.py  secrets.py
tests/: test_anonymous.py  test_broadcasts.py  test_chains.py  test_cli.py  test_client.py  test_experimental.py  test_files.py  test_generated_owner_scoped_models.py  test_generated_secret_public.py  test_groups.py  test_http.py  test_public.py  test_request_logs.py  test_service_usage.py  test_streaming.py  test_wrappers.py
(+90 files in other folders)
